--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
+    "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-lazy-load": "^4.0.1",
