--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rina",
+  "name": "filaha_en_ligne",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "mongoose": "^8.2.2",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
+    "next-intl": "^3.17.6",
     "react": "^18",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
